manifests/apps/04-automation/01-homeassistant/02-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  selector:
    matchLabels:
      name: homeassistant
  template:
    metadata:
      labels:
        name: homeassistant
    spec:
      containers:
      - name: homeassistant
        image: homeassistant/home-assistant:stable
        imagePullPolicy: Always
        ports:
        - containerPort: 8123
        volumeMounts:
        - mountPath: /config
          name: config-data
        - mountPath: /config/configuration.yaml
          name: config-file
          readOnly: true
          subPath: configuration.yaml
      volumes:
      - name: config-data
        hostPath:
          path: /mnt/gluster/gluster/automation/homeassistant/homeassistant
      - name: config-file
        configMap:
          name: homeassistant-config
          items:
            - key: configuration.yaml
              path: configuration.yaml
