manifests/apps/04-automation/01-homeassistant/03-service.yml
---
# Source: authelia/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-service
  namespace: homeassistant
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    name: homeassistant
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123
